Finished example page Marf-PHP

--- a/Marf-PHP/public/assets/css/self.css
+++ b/Marf-PHP/public/assets/css/self.css
@@ -1,7 +1,13 @@
-* {
+body {
     background-color: rgb(153, 0, 255);
 }
 
+html, body {
+    height: 100%;
+    margin: 0;
+    padding: 0;
+  }
+
 .pl-d::placeholder {
-    color: white;
+    color: black;
 }
